--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "@vue-storefront/middleware": "^2.4.5",
+    "@vue-storefront/nuxt": "^2.4.5",
+    "@vue-storefront/storyblok": "^0.3.0",
     "core-js": "^3.15.1",
+    "dashify": "^2.0.0",
     "nuxt": "^2.15.7",
-    "storyblok-nuxt": "^2.0.1"
+    "storyblok-nuxt": "^2.0.1",
+    "storyblok-vue": "^1.0.5"
   },
   "devDependencies": {
     "@marvr/storyblok-rich-text-vue-renderer": "^2.0.1",
