--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/i18n": "^7.2.0",
     "@vue-storefront/middleware": "^2.4.5",
     "@vue-storefront/nuxt": "^2.4.5",
     "@vue-storefront/storyblok": "^0.3.0",
@@ -22,9 +23,11 @@
   "devDependencies": {
     "@marvr/storyblok-rich-text-vue-renderer": "^2.0.1",
     "@nuxtjs/tailwindcss": "^4.2.1",
+    "@storyblok/nuxt": "^2.0.4",
     "@tailwindcss/typography": "^0.4.1",
     "@vue/composition-api": "^1.2.4",
     "autoprefixer": "^10.3.7",
+    "axios": "^0.21.4",
     "eslint-config-prettier": "^8.3.0",
     "postcss": "^8.3.9",
     "prettier": "^2.3.2",
